# gnome-browser-extension-mirror

./: .gitignore  .gitlab-ci.yml  NEWS  README.md  gnome-browser-extension.doap  meson.build  meson_options.txt  requirements.in  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
connector/: chrome-gnome-shell.py
contrib/: README  chrome-messages2po.py  cp.py  merge_json.py  po2chrome-messages.py
contrib/chrome-web-store/: az  bg  ca  cs  da  de  el  en  es  eu  fa  fr  gl  he  hi  hr  hu  id  it  ja  ko  lt  nl  pl  pt_BR  pt_PT  ro  ru  sk  sl  sr  sv  tr  uk  zh_CN  zh_TW
contrib/redhat/: chrome-gnome-shell.spec
extension/: content-script-start.js  extension.html  extension.js  manifest.firefox.json  manifest.json  options.html  options.js
extension/_locales/az/: messages.json
extension/_locales/bg/: messages.json
extension/_locales/ca/: messages.json
extension/_locales/cs/: messages.json
extension/_locales/da/: messages.json
extension/_locales/de/: messages.json
extension/_locales/el/: messages.json
extension/_locales/en/: messages.json
extension/_locales/en_GB/: messages.json
extension/_locales/es/: messages.json
extension/_locales/et/: messages.json
extension/_locales/fa/: messages.json
extension/_locales/fi/: messages.json
extension/_locales/fr/: messages.json
extension/_locales/he/: messages.json
extension/_locales/hi/: messages.json
extension/_locales/hr/: messages.json
extension/_locales/hu/: messages.json
extension/_locales/id/: messages.json
extension/_locales/it/: messages.json
extension/_locales/ja/: messages.json
extension/_locales/ko/: messages.json
extension/_locales/lt/: messages.json
extension/_locales/nb/: messages.json
extension/_locales/nl/: messages.json
extension/_locales/pl/: messages.json
extension/_locales/pt_BR/: messages.json
extension/_locales/pt_PT/: messages.json
extension/_locales/ro/: messages.json
extension/_locales/ru/: messages.json
extension/_locales/sk/: messages.json
extension/_locales/sl/: messages.json
extension/_locales/sr/: messages.json
extension/_locales/sv/: messages.json
extension/_locales/tr/: messages.json
extension/_locales/uk/: messages.json
extension/_locales/zh_CN/: messages.json
extension/_locales/zh_TW/: messages.json
extension/css/: options.css
extension/include/: compat-common.js  compat-content-script.js  constants.js  gsc.js  i18n.js  integration.js  notifications.js  sweettooth-api.js  sync.js  toolbar.js  update.js
po/: LINGUAS  az.po  be.po  bg.po  chrome-gnome-shell.pot  cs.po  es.po  fa.po  fr.po  gl.po  he.po  hi.po  hu.po  ka.po  kab.po  lt.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sl.po  sv.po  tr.po  uk.po  zh_CN.po
